# tactical-tux

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  build.sh  setup_github.sh
include/: Camera.h  Crosshair.h  MapEditor.h  Mesh.h  Physics.h  Player.h  Shader.h
src/: Camera.cpp  Crosshair.cpp  MapEditor.cpp  Mesh.cpp  Physics.cpp  Player.cpp  Shader.cpp  main.cpp
